# git_alert

./: .gitignore  README.md  config.toml  default.nix  flake.nix  pyproject.toml  requirements.txt  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 84rb4y5vjqs9jmcc4ljqp4jgdflnq6q0-source  frx88jf7jhrm7k4l21hm9rxvh12ms1v9-source  h9lasbadc9jfi42f1hc05rn599hhf515-source  r7bncqrk0s89mfv8ww0v1am2bl9f7321-source  rdwydjiqy8z78n6224hvzszsrl5c843w-source
.github/workflows/: publication.yml  tests.yml
git_alert/: __init__.py  __main__.py  app.db  argument_parser.py  configuration.py  db.py  display.py  repositories.py  schema.sql  status.sql  traverse.py
git_alert/scripts/: git_alert.py
tests/: test_argument_parser.py  test_check.py  test_configuration.py  test_display.py  test_repositories.py  test_traverse.py
