[tool.poetry]
name = "cli"
version = "0.1.0"
description = "Checks a given path and its subdirectories for dirty git repositories."
authors = ["Simon Antonius Lauer <simon.lauer@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.development.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
